# more_abc

./: .editorconfig  .gitignore  AI_POLICY.md  Changelog.md  License  License.md  README.md  pyproject.toml
more_abc/: __init__.py  __init__.pyi  __main__.py  __main__.pyi  _read_last_version.py  abc_dataclasses.py  abc_dataclasses.pyi  abc_enum.py  abc_enum.pyi  abc_io.py  abc_io.pyi  abc_json.py  abc_json.pyi  abc_loogging.py  abc_loogging.pyi  collections_abc.py  collections_abc.pyi  more.py  more.pyi  settings.cfg  version.cfg
more_abc/settings/: _read_last_version.py  _read_last_version.pyi
