[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "more-abc"
version = "2.0.0"
description = "An extension of the abc module with many similar features added."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Evan Yang", email = "quantbit@126.com" }
]
requires-python = ">=3.9"
keywords = ["abc", "abstract", "mixin", "dataclass", "enum", "logging", "collections"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/aiwonderland/more_abc"
Repository = "https://github.com/aiwonderland/more_abc"

[project.scripts]
more-abc = "more_abc.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["more_abc"]
