[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "more_abc"
version = "2.1.12"
description = "An extension of the abc module with many similar features added."
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
    { name = "Evan Yang", email = "quantbit@126.com" }
]
requires-python = ">=3.9"
keywords = ["abc", "abstract", "mixin", "dataclass", "enum", "logging", "collections", "io"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL-3.0 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/aiwonderland/more_abc"
Repository = "https://github.com/aiwonderland/more_abc"

[project.scripts]
more-abc = "more_abc.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["more_abc"]
